# pipeline-flow

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  post_init.sh
.github/workflows/: main-merge.yml  tag-release.yml
docker/: docker-compose.yml
docs/: Makefile  class.md  class_diagram.drawio  conf.py  index.rst  plugin.md
docs/_static/: overrides.css
docs/pages/: architecture.rst  core_plugins.rst  examples.rst  introduction.rst  plugin_development.rst  plugins.rst  quick_start.rst  roadmap.rst
experiments/: data_flow.py  exceptions.py  logging_test.py
experiments/asyncio/: ascyncio_queue.py  blocking_example.py  parallel_pipeline.py  parallel_pipeline_with_queue.py  pyspark_asyncio.py  sequential_parallel_asyncio.py
notes/: plugins.txt
pipeline_flow/: entrypoint.py
pipeline_flow/common/: type_def.py
pipeline_flow/core/: executor.py  plugin_loader.py  registry.py
pipeline_flow/plugins/: __init__.py  base.py
src/: entrypoint.py  main.py  yaml_example.py
src/common/: config.py  decorator.py  logger.py  type_def.py  utils.py
src/core/: data_flow.py  executor.py  factory.py  loaders.py  models.py  orchestrator.py  parser.py  pipeline_strategy.py  plugins.py  storage_phase.py  transition_step.py
src/plugins/: __init__.py  loader.py  registry.py
src/utils/: logger.py
tests/: conftest.py  test_config.py  test_utils.py
tests/common/: constants.py  mocks.py
tests/e2e/: conftest.py  e2e_plugins.py  test_e2e_entrypoint.py
tests/integration/: potentially_test_plugins.py  test_integration_executor.py  test_integration_loaders.py  test_integration_orchestrator.py  test_integration_parser.py  test_integration_pipeline_parser.py  test_integration_plugin_parser.py  (+4 more)
(+110 files in other folders)
