[tool.poetry]
name = "pipeline-orchestrator"
version = "0.0.0"
description = "A framework for building ETL, ELT and ETLT projects dynamically using plugins.."
authors = ["Jakub Pulaczewski"]
license = "MIT"
packages = [
    { include="**/*.py", from="src"}
]

[tool.poetry.dependencies]
python = "^3.13"
asyncio = "^3.4.3"
PyYAML = "^6.0.1"
pydantic = "^2.4.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cases = "^3.8.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pyright = "^1.1.392.post0"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"